Testcase for multifixing working
And, it's green.

TODO: I've added in some dummy problems that have quickfixes availible.
They could be used as a second test, but the ordering not being consistent
may throw them off